name:                rebar
version:             0.1.0.0
synopsis:            Composable form widgets for reflex-dom apps
-- description:
bug-reports:         https://github.com/mightybyte/rebar/issues
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardsley
category:            Reflex
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules:
    Rebar.FormWidget
    Rebar.Form.Common

  build-depends:
    Decimal,
    base,
    bimap,
    containers,
    data-default,
    lens,
    mtl,
    random,
    reflex >= 0.8 && < 0.9,
    reflex-dom-core >= 0.6 && < 0.8,
    reflex-dom-contrib,
    text
